# BTekEngine

./: .gitignore  CMakeLists.txt  README.md
Assets/Engine/: main.vs
Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Engine/Core/: CMakeLists.txt  MSWindow.cpp  MSWindow.h  Window.cpp  Window.h
Engine/Graphics/: BufferObject.h  CMakeLists.txt  GraphicsApi.cpp  GraphicsApi.h  IndexBuffer.cpp  IndexBuffer.h  Material.h  Mesh.cpp  Mesh.h  OpenGLApi.cpp  OpenGLApi.h  Shader.cpp  Shader.h  ShaderVariable.cpp  ShaderVariable.h  Texture2D.cpp  Texture2D.h  VertexBuffer.cpp  VertexBuffer.h
Engine/Graphics/Platform/: CMakeLists.txt  MSWindow.cpp  MSWindow.h  OpenGLApiWindows.cpp  OpenGLApiWindows.h  Window.cpp  Window.h
Engine/Math/: CMakeLists.txt  Vector.h
Engine/Util/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  ConsoleLoggerImpl.h  Logger.h
Snake/: CMakeLists.txt  main.cpp
