cmake_minimum_required (VERSION 3.8)

add_subdirectory(Platform)

set(GRAPHICS_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/GraphicsApi.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/GraphicsApi.h
	${CMAKE_CURRENT_SOURCE_DIR}/OpenGLApi.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/OpenGLApi.h
	${GRAPHICS_PLATFORM_SOURCES}
	PARENT_SCOPE
)